# yetty-new

./: .buckconfig  .clang-format  .gitignore  BUCK  CMakeLists.txt  LICENSE  Makefile  Makefile.2  Makefile.buck  README.md  flake.nix
build-tools/cmake/pdfium/: CMakeLists.txt
demo/ygui/: CMakeLists.txt
demo/ygui/01_button_test/: CMakeLists.txt  main.c
demo/ygui/02_coord_debug/: CMakeLists.txt  main.c
demo/ygui/03_all_widgets/: CMakeLists.txt  main.c
demo/ygui/04_edge_test/: CMakeLists.txt  main.c
demo/ygui/05_debug_events/: CMakeLists.txt  main.c
demo/ygui/06_hello_button/: CMakeLists.txt  main.c
demo/ygui/07_label_and_button/: CMakeLists.txt  main.c
demo/ygui/08_slider/: CMakeLists.txt  main.c
demo/ygui/09_checkbox/: CMakeLists.txt  main.c
demo/ygui/10_panel_layout/: CMakeLists.txt  main.c
demo/ygui/11_progress_bar/: CMakeLists.txt  main.c
demo/ygui/12_calculator/: CMakeLists.txt  main.c
demo/ygui/13_color_mixer/: CMakeLists.txt  main.c
demo/ygui/14_todo_list/: CMakeLists.txt  main.c
demo/ygui/15_dashboard/: CMakeLists.txt  main.c
demo/ygui/16_new_widgets/: CMakeLists.txt  main.c
demo/ymgui/: CMakeLists.txt
demo/ymgui/01_demo_window/: CMakeLists.txt  main.cpp
src/yclient-lib/: CMakeLists.txt  event-loop.c
src/yetty/: CMakeLists.txt  cdb-wrapper.cpp  config.c  config.cpp  gpu-allocator.cpp  gpu-buffer-manager.cpp  gpu-memory-manager.cpp  gpu-resource-binder.cpp  gpu-texture-manager.cpp  incbin-assets.c  incbin-assets.cpp  msdf-atlas.cpp  msdf-cdb-provider.cpp  shader-manager.cpp  shared-bind-group.cpp  tree-like.cpp  util.c  yetty-old.cpp  yetty.c  yetty.cpp  ytrace.c
src/yetty/core/: CMakeLists.txt  config.c  event-queue.cpp  types.c  webasm-pipe.cpp
src/yetty/font/: CMakeLists.txt  bm-font.cpp  font-manager.cpp  freetype.cpp  ms-msdf-font.cpp  raster-font.c  raster-font.cpp  raw-font-manager.cpp  raw-font.cpp  shader-font.cpp  vector-coverage-font.cpp  vector-sdf-font.cpp
src/yetty/font-cpp/: CMakeLists.txt  font-manager.cpp  raw-font.cpp
src/yetty/msdf-gen/: generator.cpp  generator.hpp  main.cpp
src/yetty/msdf-wgsl/: CMakeLists.txt
src/yetty/render/: CMakeLists.txt  blender.c  gpu-allocator.c  gpu-resource-binder.c  layer-renderer.c  render-target-surface.c  rendered-layer.c  types.c
src/yetty/shaders/: cursor.wgsl  terminal-screen-raster-font.wgsl  terminal-screen.wgsl
src/yetty/term/: CMakeLists.txt  osc-args.c  pty-reader.c  render-terminal-screen.incl  terminal-screen.cpp  terminal.c  terminal.cpp  text-grid-layer.cpp  text-layer.c  text-layer.wgsl  ypaint-layer.c  ypaint-layer.wgsl
src/yetty/term-cpp/: README.md  render-terminal-screen.incl  terminal-screen.cpp  terminal.cpp  text-grid-layer.cpp
src/yetty/ycat/: CMakeLists.txt  detect.c  fetch.c  handler-markdown.c  handler-pdf.c  osc.c  ts-grammars.c  ts-grammars.h  ts-highlight.c  ycat.c
src/yetty/ycdb/: CMakeLists.txt  ycdb.c
src/yetty/yco/: CMakeLists.txt  co.c
src/yetty/ycore/: CMakeLists.txt  types.c  util.c
src/yetty/yexpr/: CMakeLists.txt  yexpr.c
src/yetty/yface/: CMakeLists.txt  yface.c
src/yetty/yfont/: CMakeLists.txt  ms-msdf-font.c  ms-msdf-font.wgsl  ms-raster-font.c  msdf-font.c  msdf-font.wgsl  raster-font.c  raster-font.wgsl
src/yetty/yfsvm/: CMakeLists.txt  compiler.c  yfsvm-opcodes.yaml  yfsvm.gen.wgsl
src/yetty/ygui/: CMakeLists.txt  ygui.h  ygui_engine.c  ygui_grid.c  ygui_internal.h  ygui_osc.c  ygui_render.c  ygui_theme.c  ygui_widgets.c
src/yetty/yimage/: CMakeLists.txt  yimage.c
src/yetty/ymarkdown/: CMakeLists.txt  ymarkdown.c
src/yetty/ymgui/: CMakeLists.txt
src/yetty/yms-msdf/: CMakeLists.txt  yms-msdf.c
src/yetty/ymsdf-gen/: CMakeLists.txt  ymsdf-gen.cpp
src/yetty/ymsdf-gen-cpu/: CMakeLists.txt  ymsdf-gen-cpu.cpp
src/yetty/ypaint/: CMakeLists.txt  animation.cpp  animation.hpp  flyweight.c  painter-buffer.inc  painter-font.inc  painter-gpu.inc  painter-private.inc  painter-text.inc  painter.cpp  triangulate.cpp  yaml2ypaint.cpp  ypaint-buffer.cpp  ypaint-buffer.hpp  ypaint-canvas.c  ypaint-prim-writer.gen.hpp
src/yetty/ypaint-core/: CMakeLists.txt  buffer.c  complex-prim-types.c  flyweight.c  font-prim.c  text-span-prim.c  types.c
src/yetty/ypaint-gen/: generate.py
src/yetty/ypaint-old/: canvas.cpp  gen-ypaint-types.py  painter-grid.inc  painter-private.inc  painter-state.inc  painter.cpp  yaml2ypaint.hpp
src/yetty/ypaint-yaml/: CMakeLists.txt  ypaint-yaml.c
src/yetty/ypdf/: CMakeLists.txt  pdf-content-parser.c  pdf-renderer.c
src/yetty/yplatform/: getopt.c
src/yetty/yplot/: CMakeLists.txt  yplot-gen-yaml.c  yplot-gen.c  yplot-gen.h  yplot-gen.wgsl  yplot.c  yplot.wgsl  yplot.yaml
src/yetty/yqemu/: CMakeLists.txt  qemu.c
src/yetty/yrender/: CMakeLists.txt  blend.wgsl  blender.c  gpu-allocator.c  gpu-resource-binder.c  layer-renderer-surface.c  layer-renderer.c  primitive-gpu-binder.c  render-target-surface.c  render-target-texture.c  render-target-vnc.c  render-target-x11-tile.c  rendered-layer.c  types.c
src/yetty/yrich/: CMakeLists.txt  ydoc.c  yrich-command.c  yrich-document.c  yrich-element.c  yrich-operation.c  yrich-selection.c  yrich-yaml.c  yslides.c  (+1 more)
src/yrender-utils/: CMakeLists.txt  tile-diff.c
tools/: CMakeLists.txt  android_x86_64.sh  ios_x86_64.sh  sim-keyboard.sh  test-chrome-headless.sh  test-font-positioning.cpp  tvos_x86_64.sh
tools/card-runner/: main.cpp
tools/decode-ypaint/: CMakeLists.txt  main.c
tools/gen-msdf/: CMakeLists.txt  main.c
tools/qa/: CMakeLists.txt  run-result-checker.sh
tools/refactoring/: replace
tools/vnc-recorder/: CMakeLists.txt  vnc-recorder.cpp
tools/webgpu-test/: gpu-screen-test.cpp
tools/ycat/: CMakeLists.txt  main.c
tools/ydoc/: CMakeLists.txt  main.c  main.cpp
tools/ypaint-bench/: CMakeLists.txt  main.c
tools/yrich-runner/: CMakeLists.txt  yrich-runner.c  yrich-runner.h
tools/yrpc-client/: yrpc.py
tools/ysheet/: CMakeLists.txt  main.c
tools/yslide/: CMakeLists.txt  main.c
tools/yslides/: CMakeLists.txt  main.cpp
tools/yspreadsheet/: CMakeLists.txt  main.cpp
tools/ythorvg/: CMakeLists.txt  main.c
(+703 files in other folders)
