#=============================================================================
# yetty - WebGPU Terminal Emulator
#=============================================================================
cmake_minimum_required(VERSION 3.20)

set(CMAKE_POLICY_VERSION_MINIMUM 3.5 CACHE STRING "Minimum CMake policy version")
cmake_policy(SET CMP0074 NEW)

project(yetty VERSION 0.1.0 LANGUAGES C CXX)

# Set YETTY_ROOT to this directory (works for both direct and subdirectory builds)
set(YETTY_ROOT ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "Yetty root directory")

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build shared libraries" FORCE)

# Build options
option(YETTY_ANDROID "Build for Android" OFF)
option(YETTY_IOS "Build for iOS" OFF)
set(WEBGPU_BACKEND "dawn" CACHE STRING "WebGPU backend (wgpu or dawn)")
set(TOYBOX_PATH "" CACHE PATH "Path to Toybox binary")

# Central build variables (libraries and features)
include(${YETTY_ROOT}/build-tools/cmake/variables.cmake)

# Include CPM
include(${YETTY_ROOT}/build-tools/cmake/CPM.cmake)

# Detect platform and include appropriate target
if(YETTY_ANDROID)
    include(${YETTY_ROOT}/build-tools/cmake/targets/android.cmake)
elseif(YETTY_IOS OR CMAKE_SYSTEM_NAME STREQUAL "iOS")
    include(${YETTY_ROOT}/build-tools/cmake/targets/ios.cmake)
elseif(EMSCRIPTEN)
    include(${YETTY_ROOT}/build-tools/cmake/targets/webasm.cmake)
elseif(WIN32)
    include(${YETTY_ROOT}/build-tools/cmake/targets/windows.cmake)
elseif(APPLE)
    include(${YETTY_ROOT}/build-tools/cmake/targets/macos.cmake)
else()
    # Linux and other Unix
    include(${YETTY_ROOT}/build-tools/cmake/targets/linux.cmake)
endif()

# Tools
add_subdirectory(${YETTY_ROOT}/tools ${CMAKE_BINARY_DIR}/tools)

# Demos
if(YETTY_ENABLE_FEATURE_DEMO)
    add_subdirectory(${YETTY_ROOT}/demo ${CMAKE_BINARY_DIR}/demo)
endif()
