add_subdirectory(gpu-info)
add_subdirectory(card-runner)
add_subdirectory(ydraw-generator)
add_subdirectory(ypaint-bench)
add_subdirectory(ydraw-maze)
add_subdirectory(ydraw-zoo)
add_subdirectory(ymux)
add_subdirectory(yflame)

# PDF and HTML tools (desktop only - require pdfio, litehtml)
if(NOT YETTY_ANDROID AND NOT EMSCRIPTEN)
    add_subdirectory(pdf2ydraw)
    add_subdirectory(html2ydraw)
    add_subdirectory(yhtml-machine)
    add_subdirectory(ybrowser)
    # vnc-recorder requires miniaudio/fdk-aac (Linux/macOS only for now)
    if(NOT WIN32)
        add_subdirectory(vnc-recorder)
    endif()
    add_subdirectory(ydoc)
    add_subdirectory(yspreadsheet)
    add_subdirectory(yslides)
endif()
